--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "api": "json-server --watch mock-api.json"
   },
   "husky": {
     "hooks": {
@@ -58,6 +59,7 @@
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
+    "json-server": "^0.16.3",
     "lint-staged": "^10.5.3",
     "plop": "^2.7.4",
     "prettier": "^2.2.1",
